<resources>
    <string name="app_name">Newsopedia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">TOP HEADLINES</string>
    <string name="menu_gallery">BUSINESS</string>
    <string name="menu_slideshow">SPORTS</string>
    <string name="menu_science">SCIENCE</string>
    <string name="menu_technology">TECHNOLOGY</string>
    <string name="menu_finance">FINANCE</string>
</resources>