<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newsopedia.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.newsopedia.ui.gallery.BusinessFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.newsopedia.ui.slideshow.SporthowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_science"
        android:name="com.example.newsopedia.ui.science.ScienceFragment"
        android:label="@string/menu_science"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_technology"
        android:name="com.example.newsopedia.ui.technology.TechnologyFragment"
        android:label="@string/menu_technology"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_finance"
        android:name="com.example.newsopedia.ui.finance.FinanceFragment"
        android:label="@string/menu_finance"
        tools:layout="@layout/fragment_home" />

</navigation>